--- a/.github/workflows/deploy-test-nuxt-storefront-cloud.yml
+++ b/.github/workflows/deploy-test-nuxt-storefront-cloud.yml
@@ -20,6 +20,7 @@ jobs:
       ARTIFACT_TYPE: "sfui2-docs-vue"
       DOCKERFILE_PATH: ".vuestorefrontcloud/test-nuxt/docker/Dockerfile"
       ENVIRONMENT: ${{ needs.configure-enviroment.outputs.environment }}
+      TARGET_DOMAIN: ${{ needs.configure-enviroment.outputs.target-domain }}
 
   deploy:
     needs: [ build, configure-enviroment ]
