--- a/.vuestorefrontcloud/docs/Dockerfile
+++ b/.vuestorefrontcloud/docs/Dockerfile
@@ -2,17 +2,19 @@ FROM node:20-alpine AS build
 
 WORKDIR /var/www
 
+COPY . .
+
 ARG VITE_DOCS_BASEPATH
 ARG VITE_DOCS_EXAMPLES_REACT_PATH
 ARG VITE_DOCS_EXAMPLES_VUE_PATH
 ARG ENVIRONMENT
 
 ENV VITE_DOCS_BASEPATH=$VITE_DOCS_BASEPATH
+ENV NUXT_APP_BASE_URL=$VITE_DOCS_BASEPATH
 ENV VITE_DOCS_EXAMPLES_REACT_PATH=$VITE_DOCS_EXAMPLES_REACT_PATH
 ENV VITE_DOCS_EXAMPLES_VUE_PATH=$VITE_DOCS_EXAMPLES_VUE_PATH
 ENV ENVIRONMENT=$ENVIRONMENT
 
-COPY . .
 RUN yarn
 RUN ENV_NAME=$ENVIRONMENT yarn build:replace-assets-url-with
 RUN yarn build:vue
