--- a/.vuestorefrontcloud/router/docker/Dockerfile
+++ b/.vuestorefrontcloud/router/docker/Dockerfile
@@ -6,4 +6,4 @@ ENV TARGET_DOMAIN=$TARGET_DOMAIN
 
 COPY .vuestorefrontcloud/router/docker/default.conf.template /etc/nginx/conf.d/default.conf.template
 
-RUN envsubst < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf
+RUN envsubst '$TARGET_DOMAIN' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf
