fix: example paths (#3244)

--- a/.vuestorefrontcloud/docs/Dockerfile
+++ b/.vuestorefrontcloud/docs/Dockerfile
@@ -9,10 +9,10 @@ ARG VITE_DOCS_EXAMPLES_REACT_PATH
 ARG VITE_DOCS_EXAMPLES_VUE_PATH
 ARG ENVIRONMENT
 
-ENV VITE_DOCS_BASEPATH=$VITE_DOCS_BASEPATH
+ENV NUXT_DOCS_BASEPATH=$VITE_DOCS_BASEPATH
 ENV NUXT_APP_BASE_URL=$VITE_DOCS_BASEPATH
-ENV VITE_DOCS_EXAMPLES_REACT_PATH=$VITE_DOCS_EXAMPLES_REACT_PATH
-ENV VITE_DOCS_EXAMPLES_VUE_PATH=$VITE_DOCS_EXAMPLES_VUE_PATH
+ENV NUXT_DOCS_EXAMPLES_REACT_PATH=$VITE_DOCS_EXAMPLES_REACT_PATH
+ENV NUXT_DOCS_EXAMPLES_VUE_PATH=$VITE_DOCS_EXAMPLES_VUE_PATH
 ENV ENVIRONMENT=$ENVIRONMENT
 
 RUN yarn
