--- a/.vuestorefrontcloud/test-next/docker/Dockerfile
+++ b/.vuestorefrontcloud/test-next/docker/Dockerfile
@@ -8,8 +8,8 @@ ARG VITE_DOCS_BASEPATH
 ARG VITE_DOCS_EXAMPLES_REACT_PATH
 ARG ENVIRONMENT
 
-ENV VITE_DOCS_BASEPATH=$VITE_DOCS_BASEPATH
-ENV VITE_DOCS_EXAMPLES_REACT_PATH=$VITE_DOCS_EXAMPLES_REACT_PATH
+ENV NEXT_DOCS_BASEPATH=$VITE_DOCS_BASEPATH
+ENV NEXT_DOCS_EXAMPLES_REACT_PATH=$VITE_DOCS_EXAMPLES_REACT_PATH
 ENV ENVIRONMENT=$ENVIRONMENT
 
 RUN yarn
