--- a/.vuestorefrontcloud/test-nuxt/docker/Dockerfile
+++ b/.vuestorefrontcloud/test-nuxt/docker/Dockerfile
@@ -8,8 +8,8 @@ ARG VITE_DOCS_BASEPATH
 ARG VITE_DOCS_EXAMPLES_VUE_PATH
 ARG ENVIRONMENT
 
-ENV VITE_DOCS_BASEPATH=$VITE_DOCS_BASEPATH
-ENV VITE_DOCS_EXAMPLES_VUE_PATH=$VITE_DOCS_EXAMPLES_VUE_PATH
+ENV NUXT_DOCS_BASEPATH=$VITE_DOCS_BASEPATH
+ENV NUXT_DOCS_EXAMPLES_VUE_PATH=$VITE_DOCS_EXAMPLES_VUE_PATH
 ENV ENVIRONMENT=$ENVIRONMENT
 
 RUN yarn
